# forum-rs

./: Cargo.toml  README.md  app_config.dev.toml  app_config.prod.toml  app_config.toml  build.rs
.VSCodeCounter/2024-02-12_10-14-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
forum-macros/: Cargo.toml
forum-macros/src/: lib.rs
forum-utils/: Cargo.toml
forum-utils/src/: encoding_helper.rs  html_cleaner.rs  lib.rs
src/: main.rs
src/config/: app_config.rs  database.rs  meili.rs  mod.rs  permission.rs  redis.rs  s3.rs  session.rs
src/dto/: board.rs  course_tree.rs  mod.rs  student_short_info.rs
src/entity/: course.rs  homework.rs  homework_uploaded.rs  log_login.rs  log_post.rs  mod.rs  notification.rs  post.rs  student.rs  student_info.rs  tag.rs  term.rs
src/error/: api_error.rs  auth_error.rs  db_error.rs  limit_error.rs  mod.rs  param_error.rs  proc_error.rs
src/handler/: auth_handler.rs  board_handler.rs  course_handler.rs  homework_handler.rs  metadata_handler.rs  mod.rs  notification_handler.rs  post_handler.rs  swagger.rs  swagger_handler.rs  upload_handler.rs  user_handler.rs
src/middleware/: rate_limit.rs
src/repository/: course_repo.rs  homework_repo.rs  log_repo.rs  mod.rs  notification_repo.rs  post_repo.rs  student_info_repo.rs  user_repo.rs
src/response/: api_response.rs
src/routes/: auth.rs  auth_routes.rs  board_routes.rs  course_routes.rs  homework_routes.rs  metadata_routes.rs  mod.rs  notification_routes.rs  post_routes.rs  root.rs  upload_routes.rs  user.rs  user_routes.rs
src/service/: auth.rs  auth_service.rs  board_service.rs  course_service.rs  homework_service.rs  log_service.rs  metadata_service.rs  mod.rs  notification_service.rs  post_service.rs  search_engine_service.rs  student_info_service.rs  upload_service.rs  user.rs  user_service.rs
src/state/: auth_state.rs  board_state.rs  course_state.rs  homework_state.rs  limit_state.rs  metadata_state.rs  mod.rs  notification_state.rs  post_state.rs  upload_state.rs  user_state.rs
src/utils/: string_utils.rs
template/: login.html
templates/: login.html
